welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:2: error: not found: value estSurLettre
while (estSurLettre()==true) {
       ^BDR2:3: error: not found: value lettre
	lettre match {
        ^